@@ -1,3 +1,8 @@
+2007-02-15  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR debug/30189
+	* gcc.dg/pr30189.c: New test.
+
 2007-02-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* g++.dg/tree-ssa/nothrow-1.C: Skip test if -fpic/-fPIC is used.
