@@ -1,3 +1,9 @@
+2007-02-15  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR debug/30189
+	* dwarf2out.c (modified_type_die): Follow DECL_ORIGINAL_TYPE
+	even if cv-qualification is the same.
+
 2007-02-14  Eric Botcazou  <ebotcazou@adacore.com>
             Maxim Kuvyrkov <mkuvyrkov@ispras.ru>
 
